# BMSTU-MDPL

./: .gitignore
lab_02/: PROG1.ASM
lab_03/: HELLO.ASM
lab_04/: prog.asm
lab_05/: bin.asm  hex.asm  io.asm  main.asm
lab_06/: main.asm
lab_07/: CMakeLists.txt  build.sh  main.cpp  strcpy.asm
lab_08/: CMakeLists.txt  float_32.cpp  measure.cpp  measure.h
lab_09/: CMakeLists.txt  main.cpp
